--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,7 @@ button {
   padding: 0 30px;
   line-height: 45px;
   text-align: center;
+  background: transparent;
   transition: all 0.4s ease-out;
 }
 h4 {
@@ -64,6 +65,21 @@ h4 {
   margin-top: 11px;
   font-weight: 400;
   color: #505056;
+}
+.main-btn {
+  border: 1px solid #e7eaef;
+  background-color: #fff;
+  color: #0e1133;
+}
+.main-btn:hover {
+  border: 1px solid #ff3e66;
+  background-color: #ff3e66;
+  color: #fff;
+}
+.tag {
+  font-size: 14px;
+  font-weight: 500;
+  color: #ff3e66;
 }
 
 /* ==========================================================================
@@ -291,16 +307,6 @@ header .nav-btn .menu-btn {
   align-items: flex-end;
   padding-bottom: 55px;
 }
-.services .section-header .section-btn .main-btn {
-  border: 1px solid #e7eaef;
-  background-color: #fff;
-  color: #0e1133;
-}
-.services .section-header .section-btn .main-btn:hover {
-  border: 1px solid #ff3e66;
-  background-color: #ff3e66;
-  color: #fff;
-}
 .services .services-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -418,11 +424,6 @@ header .nav-btn .menu-btn {
 .about .about-content .about-text {
   flex: 1 1 50%;
 }
-.about .about-content .about-text span {
-  font-size: 14px;
-  font-weight: 500;
-  color: #ff3e66;
-}
 .about .about-content .about-text .section-title .title {
   margin-top: 8px;
   margin-bottom: 12px;
@@ -462,6 +463,7 @@ header .nav-btn .menu-btn {
   font-size: 20px;
   font-weight: 700;
   color: #0e1133;
+  line-height: 1.2;
 }
 .about .about-content .about-text .about-box .item .text p {
   font-size: 15px;
@@ -586,6 +588,144 @@ header .nav-btn .menu-btn {
   line-height: 24px;
   color: #505056;
 }
+
+/* ==========================================================================
+      Video Section
+      ========================================================================== */
+.video{
+  padding-bottom: 100px;
+}
+.video .video-content{
+  display: grid;
+  grid-template-columns: 1fr 370px;
+  grid-template-rows: repeat(2,auto);
+  gap: 30px;
+}
+.thumb { 
+  grid-area: 1 / 1 / 2 / 2; 
+  position: relative;
+}
+.thumb .player{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 90px;
+  height: 90px;
+  background-color: #fff;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.thumb .player i{
+    font-size: 20px;
+    color: #ff3e66;
+}
+.slider { 
+  grid-area: 1 / 2 / 3 / 3; 
+}
+.slider .slider-arrows{
+  padding-top: 35px;
+  display: flex;
+  justify-content: flex-end;
+  column-gap: 15px;
+}
+.slider .next , .slider .prev{
+   width: 50px;
+   height: 50px;
+   border-radius: 50%;
+   border: 2px solid #e3e5e8;
+   cursor: pointer;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   transition: all .3s linear;
+}
+.slider .next:hover , .slider .prev:hover{
+  background-color: #ff3e66;
+  border-color: #ff3e66;
+}
+.slider .next i , .slider .prev i{
+  color: #0e1133;
+}
+.slider .next:hover i , .slider .prev:hover i{
+  color: #fff;
+}
+.video .text { 
+  grid-area: 2 / 1 / 3 / 2; 
+  padding: 5px 0 0 100px;
+}
+.video .text .title{
+  font-size: 30px;
+  margin-bottom: 12px;
+  font-weight: 900;
+  color: #0e1133;
+}
+.video .text p{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    color: #505056;
+    margin-bottom: 33px;
+}
+
+/* ==========================================================================
+      Download Section
+      ========================================================================== */
+.download{
+  padding: 150px 0 160px 0;
+  background-color: #F0F1F7;
+}
+.download .title{
+    margin: 9px 0 13px 0;
+}
+.download p{
+  font-size: 16px;
+  color: #505056;
+  font-weight: 400;
+  line-height: 24px;
+  max-width: 40%;
+  margin-bottom: 30px;
+}
+.download .download-links{
+  display: flex;
+  column-gap: 12px;
+  align-items: center;
+}
+.download .download-links a{
+  padding: 14px 40px 14px 22px;
+  border: 2px solid #0e1133;
+  border-radius: 16px;
+  display: flex;
+  column-gap: 11px;
+  transition: all .3s linear;
+}
+.download .download-links a i{
+  font-size: 36px;
+}
+.download .download-links a span{
+     font-size: 14px;
+     font-weight: 500;
+}
+.download .download-links a span .platform{
+  display: block;
+  font-size: 24px;
+  line-height: 18px;
+}
+.download .download-links .link-2:hover ,.download .link-1{
+  background-color: #0e1133;
+  color: #fff;
+}
+.download .download-links .link-1:hover ,.download .link-2{
+    background-color: #fff;
+    color: #0e1133;
+}
+
+
+
+
+
 
 /* ==========================================================================
       Media Queries for Responsive Design
