--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,7 @@ body {
 
 img {
   max-width: 100%;
+  vertical-align: middle;
 }
 
 a {
@@ -868,74 +869,237 @@ header .nav-btn .menu-btn {
 /* ==========================================================================
       Testimotional Section
       ========================================================================== */
-.testimotional{
+.testimotional {
   padding-bottom: 90px;
 }
-.testimotional .slider{
-    position: relative;
-    background-color: #2C6FF4;
-    padding: 120px 170px;
+.testimotional .slider {
+  position: relative;
+  background-color: #2c6ff4;
+  padding: 120px 170px;
 }
-.testimotional .slider .slide{
-   display: flex;
-   justify-content: space-between;
-   gap: 60px;
+.testimotional .slider .slide {
+  display: flex;
+  justify-content: space-between;
+  gap: 60px;
 }
-.testimotional .slider .slide .author img{
-     display: inline-block;
-     min-width: 140px;
-     border-radius: 50%;
-     margin-bottom: 13px;
+.testimotional .slider .slide .author img {
+  display: inline-block;
+  min-width: 140px;
+  border-radius: 50%;
+  margin-bottom: 13px;
 }
-.testimotional .slider .slide .author .rate{
-   display: flex;
-   justify-content: center;
-   column-gap: 5px;
-   margin-bottom: 8px;
+.testimotional .slider .slide .author .rate {
+  display: flex;
+  justify-content: center;
+  column-gap: 5px;
+  margin-bottom: 8px;
 }
-.testimotional .slider .slide .author .rate i{
-    font-size: 14px;
-    color: #ffb848;
+.testimotional .slider .slide .author .rate i {
+  font-size: 14px;
+  color: #ffb848;
 }
-.testimotional .slider .slide .author span{
+.testimotional .slider .slide .author span {
   display: block;
-    text-align: center;
-    font-size: 13px;
-    font-weight: 500;
-    color: #fff;
-    opacity: .7;
+  text-align: center;
+  font-size: 13px;
+  font-weight: 500;
+  color: #fff;
+  opacity: 0.7;
 }
-.testimotional .slider .slide .review p{
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 30px;
-    color: #fff;
-    margin-bottom: 27px;
+.testimotional .slider .slide .review p {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
+  color: #fff;
+  margin-bottom: 27px;
 }
-.testimotional .slider .slide .review .author-info .title{
-    color: #fff;
-    font-size: 20px;
-    font-weight: 700;
-    line-height: 1.2;
+.testimotional .slider .slide .review .author-info .title {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 1.2;
 }
-.testimotional .slider .slide .review .author-info span{
+.testimotional .slider .slide .review .author-info span {
   color: #fff;
   font-size: 14px;
-  opacity: .7;
+  opacity: 0.7;
 }
-.testimotional .slider .slider-arrows{
+.testimotional .slider .slider-arrows {
   padding-top: 0;
   position: absolute;
   bottom: 120px;
   right: 140px;
+  z-index: 9;
 }
-.testimotional .slider .slider-arrows .next , .testimotional .slider .slider-arrows .prev{
+.testimotional .slider .slider-arrows .next,
+.testimotional .slider .slider-arrows .prev {
   border: 2px solid #ffffff33;
-
 }
-.testimotional .slider .slider-arrows i{
+.testimotional .slider .slider-arrows i {
   color: #fff;
 }
+
+/* ==========================================================================
+      Sponser Section
+      ========================================================================== */
+.sponser {
+  padding-bottom: 100px;
+}
+.sponser .section-title {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  padding-bottom: 25px;
+}
+.sponser .sponser-items {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-wrap: wrap;
+  column-gap: 30px;
+  margin: 0 auto 30px auto;
+}
+.sponser .sponser-items.sponsers-2{
+  column-gap: 56px;
+}
+.sponser .sponser-items .sponser-item {
+  width: 100px;
+  height: 100px;
+  background-color: #fff;
+  text-align: center;
+  line-height: 100px;
+  display: inline-block;
+  border-radius: 6px;
+  box-shadow: 0px 40px 60px 0px rgba(14, 17, 51, 0.14);
+}
+
+/* ==========================================================================
+      Footer Section
+      ========================================================================== */
+footer {
+  padding: 80px 0 60px 0;
+  background-color: #eef1f6;
+}
+footer .content {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, auto);
+}
+footer .footer-about {
+  grid-area: 1 / 1 / 2 / 2;
+  padding-right: 70px;
+}
+footer .footer-about p {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  color: #505056;
+  padding: 25px 0 15px 0;
+}
+footer .footer-about > a {
+  font-size: 15px;
+  font-weight: 500;
+  color: #0e1133;
+}
+footer .footer-about .social-links {
+  padding-top: 30px;
+}
+footer .footer-about .social-links a {
+  display: inline-block;
+  height: 36px;
+  width: 36px;
+  text-align: center;
+  background: #fff;
+  color: #0e1133;
+  border-radius: 6px;
+  line-height: 36px;
+  margin-right: 5px;
+  transition: all 0.3s linear;
+}
+footer .footer-about .social-links a:hover {
+  background-color: #ff3e66;
+  color: #fff;
+}
+footer .footer-company {
+  grid-area: 1 / 2 / 2 / 3;
+}
+footer .title {
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 18px;
+  color: #0e1133;
+}
+footer .footer-links-list li {
+  font-size: 15px;
+  font-weight: 500;
+  margin-bottom: 6px;
+}
+footer .footer-links-list li a {
+  color: #505056;
+  transition: all 0.3s linear;
+}
+footer .footer-links-list li .link:hover{
+  color: #ff3e66;
+}
+footer .footer-contact .footer-links-list li a {
+  font-size: 16px;
+  font-weight: 400;
+  margin-bottom: 10px;
+  padding-left: 30px;
+  position: relative;
+}
+footer .footer-contact .footer-links-list li a i {
+  position: absolute;
+  left: 0;
+  top: 0;
+  color: #2b70fa;
+}
+
+
+footer .footer-support {
+  grid-area: 1 / 3 / 2 / 4;
+}
+footer .footer-contact {
+  grid-area: 1 / 4 / 2 / 5;
+}
+footer .footer-copyright {
+  grid-area: 2 / 1 / 3 / 5;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 35px;
+  border-top: 1px solid #e1e5ec;
+  margin-top: 80px;
+}
+footer .footer-copyright a {
+  line-height: 40px;
+  padding: 0 23px;
+  border-radius: 6px;
+  border: 2px solid #fff;
+  color: #0e1133;
+  display: flex;
+  align-items: center;
+  column-gap: 6px;
+}
+footer .footer-copyright .download-buttons{
+  display: flex;
+  column-gap: 8px;
+}
+footer .footer-copyright .btn-1,footer .footer-copyright .btn-2:hover{
+  background: #fff;
+}
+footer .footer-copyright .btn-2 , footer .footer-copyright .btn-1:hover {
+  background: transparent;
+  border-color: #e7eaef;
+}
+footer .footer-copyright p{
+   font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    color: #505056;
+}
+
 
 
 /* ==========================================================================
